--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,2 +1,15 @@
-<h1>Homes#about</h1>
-<p>Find me in app/views/homes/about.html.erb</p>
+<div>
+  <div>
+    <h1>About</h1>
+  </div>
+  <div>
+    <p>ながのCAKEは全国発送可能なケーキ屋さんです。</p>
+    <p>お子様からお年寄りの方までお召し上がりいただけるよう、</p>
+    <p>さまざまなバリエーションをご用意しております。</p>
+    <p>また、全国へ発送可能ですのでいつでもどこでもご注文頂けます。</p>
+    <p>ぜひご注文ください。</p>
+  </div>
+  <div class="background_image">
+    <!--image-->
+  </div>
+</div>
