--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,45 @@
  */
 
 @import "bootstrap";
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color:#2F4F4F;
+ }
+
+#content{
+  min-height: 100vh;
+  position:relative;
+  padding-bottom: 100px;
+  box-sizing: border-box;
+ }
+
+ header {
+  border-bottom: 1px solid #a9a9a9;
+  background-color:#CDBBEC;
+ }
+
+.navbar-link {
+ margin-left: 30px;
+}
+
+footer{
+  border-top: 1px solid #a9a9a9;
+  padding-top:15px;
+  padding-bottom:15px;
+  text-align:center;
+  background-color:#CDBBEC;
+  height:100px;
+  position:absolute;
+  width:100%;
+  bottom: 0;
+}
+
+
+main {
+ padding-top: 20px;
+ padding-bottom: 20px;
+ // background-color:#eee;
+}
