--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,14 +30,14 @@
             <ul class="navbar-nav justify-content-end">
               <% if customer_signed_in? %>
                 <li class="navbar-link"><%= link_to "マイページ", customers_path, class: "btn btn-outline-dark" %></li>
-                <li class="navbar-link"><%= link_to "商品一覧", products_path, class: "btn btn-outline-dark" %></li>
-                <li class="navbar-link"><%= link_to "カート", customers_cart_products_path, class: "btn btn-outline-dark" %></li>
+                <li class="navbar-link"><%= link_to "商品一覧", items_path, class: "btn btn-outline-dark" %></li>
+                <li class="navbar-link"><%= link_to "カート", customers_cart_items_path, class: "btn btn-outline-dark" %></li>
                 <li class="navbar-link"><%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "btn btn-outline-dark" %></li>
               <% elsif admin_signed_in? %>
-                <li class="navbar-link"><%= link_to "商品一覧", admin_products_path, class: "btn btn-outline-dark" %></li>
+                <li class="navbar-link"><%= link_to "商品一覧", admin_items_path, class: "btn btn-outline-dark" %></li>
                 <li class="navbar-link"><%= link_to "会員一覧", admin_customers_path, class: "btn btn-outline-dark" %></li>
                 <li class="navbar-link"><%= link_to "注文履歴一覧", admin_orders_path, class: "btn btn-outline-dark" %></li>
-                <li class="navbar-link"><%= link_to "ジャンル一覧", admin_categories_path, class: "btn btn-outline-dark" %></li>
+                <li class="navbar-link"><%= link_to "ジャンル一覧", admin_genres_path, class: "btn btn-outline-dark" %></li>
                 <li class="navbar-link"><%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: "btn btn-outline-dark" %></li>
               <% else %>
                 <li class="navbar-link"><%= link_to "About", about_path, class: "btn btn-outline-dark" %></li>
