--- a/app/views/customer/customers/unsubscribe.html.erb
+++ b/app/views/customer/customers/unsubscribe.html.erb
@@ -9,6 +9,7 @@
 　  </p>
 　</div>
 
-<link_to "退会しない"><link_to "退会する">
+<%= link_to "退会しない", customers_path(@customer) %>
+<%= link_to "退会する", withdraw_path(@customer), method: :patch %>
 
 </div>
