--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -2,16 +2,16 @@
   <h3>商品新規登録</h3>
   <div class="row">
 
-    <!--colのサイズ設定   　　　ここのurlってなんだっけ？-->
+    <!--colのサイズ設定   ここのurlってなんだっけ？-->
     <%= form_with model: @item, url: admin_items_path,local: true do |f| %>
     <div class="col">
       <%#= render "public/shared/error_messages", resource: @item %>
-      <%# 上のいらないかも？　ピリリのコピー%>
+      <%# 上のいらないかも？ ピリリのコピー%>
     </div>
       <table class="cart_items">
         <tr>
           <th>商品画像</th>
-          <td><%= f.attachment_field :image %></td>
+          <td><%#= f.attachment_field :image %></td>
         </tr>
         <tr>
           <th>商品名</th>
