--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
               <% if customer_signed_in? %>
                 <li class="navbar-link"><%= link_to "マイページ", customers_path, class: "btn btn-outline-dark" %></li>
                 <li class="navbar-link"><%= link_to "商品一覧", items_path, class: "btn btn-outline-dark" %></li>
-                <li class="navbar-link"><%= link_to "カート", customers_cart_items_path, class: "btn btn-outline-dark" %></li>
+                <li class="navbar-link"><%= link_to "カート", cart_items_path, class: "btn btn-outline-dark" %></li>
                 <li class="navbar-link"><%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "btn btn-outline-dark" %></li>
               <% elsif admin_signed_in? %>
                 <li class="navbar-link"><%= link_to "商品一覧", admin_items_path, class: "btn btn-outline-dark" %></li>
