--- a/app/views/customer/customers/unsubscribe.html.erb
+++ b/app/views/customer/customers/unsubscribe.html.erb
@@ -1,15 +1,14 @@
-<h1>Customers#unsubscribe</h1>
-<p>Find me in app/views/customers/unsubscribe.html.erb</p>
+<div class="container">
+  <div>
+    <h2>本当に退会しますか？</h2>
+  <div>
+  <p>退会すると、会員登録情報や<br>
+       これまでの購入履歴が閲覧できなくなります。<br>
+       退会する場合は、「退会する」をクリックしてください。
+    </p>
+  </div>
+
+  <%= link_to "退会しない", root_path , class: "btn btn-primary"  %>
+  <%= link_to "退会する", withdraw_path(@customer), method: :patch, class: "btn btn-danger" %>
+  </div>
 <div>
-  <h2>本当に退会しますか？</h2>
-　<div>
-　  <p>退会すると、会員登録情報や<br>
-　     これまでの購入履歴が閲覧できなくなります。<br>
-　     退会する場合は、「退会する」をクリックしてください。
-　  </p>
-　</div>
-
-<%= link_to "退会しない", customers_path(@customer) %>
-<%= link_to "退会する", withdraw_path(@customer), method: :patch %>
-
-</div>
