--- a/app/views/customer/customers/edit.html.erb
+++ b/app/views/customer/customers/edit.html.erb
@@ -36,6 +36,6 @@
       <%= f.submit "編集内容を保存", class: "btn btn-success col-md-2 offset-3" %>
     </div>
       <!--く%= link_to "退会する", unsubscribe_customers_path, class: "btn btn-danger col-md-1 offset-1" %>-->
-      <p>(退会ボタン未完成)</p>
-  <% end %>
+    <%= link_to "退会する", unsubscribe_path(@customer), class: "btn btn-danger" %>
+<% end %>
 </div>
