[Add]商品・ジャンル機能完成

--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -15,11 +15,11 @@
         </tr>
         <tr>
           <th>商品説明</th>
-          <td><%= f.text_area :caption %></td>
+          <td><%= f.text_area :explanation %></td>
         </tr>
         <tr>
           <th>ジャンル</th>
-          <td><%#= f.collection_select(:genre_id, @genres, :id, :name, prompt: "選択してください") %></td>
+          <td><%= f.collection_select(:genre_id, @genres, :id, :name, prompt: "選択してください") %></td>
         </tr>
         <tr>
           <th>税抜き価格</th>
