--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -20,7 +20,7 @@
         </tr>
         <tr>
           <th>税込み価格<br>（税抜価格）</th>
-          <td><%= @item.add_tax_price.to_s(:delimited) %> (<%= @item.price.to_s(:delimited) %>)</td>
+          <td><%= @item.add_tax_price.to_s(:delimited) %> (<%= @item.price.to_s(:delimited) %>)  円</td>
         </tr>
         <tr>
           <th>販売ステータス</th>
