--- a/app/views/addresses/edit.html.erb
+++ b/app/views/addresses/edit.html.erb
@@ -1,3 +1,32 @@
-<h1>Addresses#edit</h1>
-<p>Find me in app/views/addresses/edit.html.erb</p>
-develop
+<div class="container">
+  <div class="row">
+    <h3 class="col-md-5">配送先編集</h2>
+  </div>
+  <%= form_with model:@address,url:"/addresses/#{@address.id}", local:true do |f| %>
+    <div class="col">
+      <p>(エラーメッセージの部分テンプレート表示)</p>
+      <!--く%= render "**/error_messages", resource: @address %>-->
+    </div>
+    <div class="form-group row">
+      <label for="" class="col-md-4 col-form-label">郵便番号（ハイフンなし）</label>
+      <div class="col-md-4">
+        <%= f.text_field :postcode, :class => 'form-control' %>
+      </div>
+    </div>
+    <div class="form-group row">
+      <label for="" class="col-md-4 col-form-label">住所</label>
+      <div class="col-md-8">
+        <%= f.text_field :address, :class => 'form-control' %>
+      </div>
+    </div>
+    <div class="form-group row">
+      <label for="" class="col-md-4 col-form-label">宛名</label>
+      <div class="col-md-4">
+        <%= f.text_field :name, :class => 'form-control' %>
+      </div>
+      <div class="col">
+        <%= f.submit "変更内容を保存" , class: 'btn btn-success offset-md-2' %>
+      </div>
+    </div>
+  <% end %>
+</div>
