--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,13 +1,16 @@
+<div class="container">
 <h2>商品一覧</h2>
 <h4>（全〇件）</h4>
 
 <table class="table cart_products">
 <% @items.each do |item| %>
 <tr>
-  <td><%= link_to item, book_path(book), class: "book_#{book.id}" %></td>
-
-
+  <td><%#= attachment_image_tag(item, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg") %></td>
+  <td><%= item.name %></td>
+  <td><%= item.price %></td>
 </tr>
+<% end %>
 </table>
 
 <%= render 'items/genre', genres: @genres %>
+</div>
