--- a/app/views/addresses/index.html.erb
+++ b/app/views/addresses/index.html.erb
@@ -2,11 +2,9 @@
   <div class="row">
     <h3 class="col-md-5">配送先登録/一覧</h2>
   </div>
-
   <%= form_with model:@address,url:"/addresses", local:true do |f| %>
     <div class="col">
-      <p>(エラーメッセージの部分テンプレート表示)</p>
-      <!--く%= render "**/error_messages", resource: @address %>-->
+      <%= render "layouts/error_message", model: f.object %>
     </div>
     <div class="form-group row">
       <label for="" class="col-md-4 col-form-label">郵便番号（ハイフンなし）</label>
