--- a/app/views/items/_genre.html.erb
+++ b/app/views/items/_genre.html.erb
@@ -1,14 +1,13 @@
-<div class="container">
+<div class="container px-5 px-sm-0">
   <div class="row">
-    <div class="col-md-8">
-      <table class="categories">
+    <div class="col-md-4">
+      <table class="table table-bordered">
         <tr>
-          <th class="col-md-8">ジャンル検索</th>
-          <th class="col-md-4"></th>
+          <th><div class="text-center">ジャンル検索</div></th>
         </tr>
         <% genres.each do |genre| %>
         <tr>
-          <td><%= genre.name %></td>
+          <td><div class="text-center"><%= genre.name %></div></td>
         </tr>
         <% end %>
       </table>
