--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,16 +1,23 @@
 <div class="container">
-<h2>商品一覧</h2>
-<h4>（全〇件）</h4>
-
-<table class="table cart_products">
-<% @items.each do |item| %>
-<tr>
-  <td><%#= attachment_image_tag(item, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg") %></td>
-  <td><%= item.name %></td>
-  <td><%= item.price %></td>
-</tr>
-<% end %>
-</table>
-
-<%= render 'items/genre', genres: @genres %>
+  <div class="row">
+    <div class="col-md-9 mx-auto">
+    <%= render 'items/genre', genres: @genres %>
+      <h2>商品一覧（全<%= @items.count %>件）</h2>
+      <div class='d-flex flex-wrap'>
+        <% @items.each do |item| %>
+        <div class="col-md-3">
+        <div class="card">
+        <div class="col-xs-3">
+          <%= link_to item_path(item) do %>
+          <%= attachment_image_tag item, :image, :fill, 50, 50, format: "no-image-icon.jpg" %>
+          <% end %>
+          <%= item.name %><br>
+          <%= item.price %><br>
+        </div>
+        </div>
+        </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
 </div>
