--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,2 +1,31 @@
-<h1>Orders#index</h1>
-<p>Find me in app/views/orders/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h3>注文履歴一覧</h3>
+      <table class="orders">
+        <tr>
+          <th>注文日</th>
+          <th>配送先</th>
+          <th>注文商品</th>
+          <th>支払い金額</th>
+          <th>ステータス</th>
+          <th>注文詳細</th>
+        </tr>
+        <% @orders.each do |order| %>
+            <tr>
+              <td><%= order.created_at.strftime("%Y/%m/%d") %></td>
+              <td><%= order.full_address %></td>
+              <td>
+                <% order.order_details.each do |order_detail| %>
+                  <%= order_detail.item.name %><br />
+                <% end %>
+              </td>
+              <td><%= (order.shipping_cost + order.total_payment).to_s(:delimited) %></td>
+              <td><%= order.status %></td>
+              <td><%= link_to "表示する", order_path(order), class: "btn btn-primary" %></td>
+            </tr>
+          <% end %>
+      </table>
+    </div>
+  </div>
+</div>
