--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,2 +1,17 @@
-<h1>Items#show</h1>
-<p>Find me in app/views/items/show.html.erb</p>
+<div class="container mt-3">
+  <div class="row">
+    <div class="col-9 mx-auto">
+      <%= render 'items/genre', genres: @genres %>
+      <div class="mt-5 d-flex">
+        <div class="image-box mr-4">
+          <%= attachment_image_tag @item, :image, :fill, 80, 80, format: "no-image-icon.jpg" %>
+        </div>
+        <div class="explanation-box">
+          <h4><%= @item.name %></h4>
+          <strong>¥<%= @item.tax_in_price %></strong>(税込)
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
