--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -9,8 +9,8 @@
         <div class="card">
         <div class="col-xs-3">
           <%= link_to item_path(item) do %>
-          <%= attachment_image_tag item, :image, :fill, 50, 50, format: "no-image-icon.jpg" %>
-          <% end %>
+          <%= attachment_image_tag item, :image, :fill, 80, 80, format: "no-image-icon.jpg" %>
+          <% end %><br>
           <%= item.name %><br>
           <%= item.price %><br>
         </div>
