--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,7 +8,7 @@
         </div>
         <div class="explanation-box">
           <h4><%= @item.name %></h4>
-          <strong>¥<%= @item.tax_in_price %></strong>(税込)
+          <strong>¥<%= @item.price.to_s(:delimited) %></strong>(税込)
 
         </div>
       </div>
