--- a/app/views/cart_items/index.html.erb
+++ b/app/views/cart_items/index.html.erb
@@ -1,78 +1,68 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-4">
-      <h3>ショッピングカート</h2>
+    <div class="col-md-8 offset-md-1 my-5">
+      <h2>ショッピングカート</h2>
     </div>
-    <div class="col-md-4 offset-md-4">
-      <%= link_to destroy_all_customers_cart_s_path, method: :delete do %>
-        <button type="button" class="btn btn-danger">カートを空にする</button>
-      <% end %>
+    <div class="col-md-2 my-5">
+      <div class="text-right">
+        <%= link_to "カートを空にする", destroy_all_path, method: :delete, class:"btn btn-danger" %>
+      </div>
     </div>
   </div>
-
   <div class="row">
     <div class="col">
-
-      <table class="cart_products col-md-10">
-        <tr>
-          <th>商品名</th>
-          <th>単価(税込)</th>
-          <th>数量</th>
-          <th>小計</th>
-          <th></th>
-        </tr>
-
-          <% @cart_products.each do |cart_product| %>
+      <table class="cart_items col-md-10">
+        <thead class="table-warning">
+          <th style="width: 35%">商品名</th>
+          <th style="width: 15%">単価（税込）</th>
+          <th style="width: 20%">数量</th>
+          <th style="width: 15%">小計</th>
+          <th style="width: 15%"></th>
+        </thead>
+        <tbody>
           <tr>
-          <td>
-            <!--img追加-->
-
-            <%= cart_product.product.name %>
-          </td>
-
-          <td>
-            <%= cart_product.product.add_tax_price.to_s(:delimited) %>
-          </td>
-          <td>
-            <%= form_with model: cart_product, url:"/customers/cart_products/#{cart_product.id}", local: true do |f| %>
-              <%= f.select :quantity, *[1..30] %>
+            <% @cart_items.each do |cart_item| %>
+        　   <td>
+              <%= attachment_image_tag cart_item.item, :image, format: '.jpeg', size: "60x40" %>
+              <%= cart_item.item.name %>
+            </td>
+            <!--delimited：数値を３桁で区切る-->
+            <td><%= cart_item.item.add_tax_price.to_s(:delimited) %></td>
+            <td>
+              <%= f.select :amount, *[1..30] %>
               <%= f.submit '変更' %>
+            </td>
+            <!--数値を３桁で区切る-->
+            <td><%= cart_item.subtotal.to_s(:delimited) %></td>
+            <!--@totalに各商品ごとの小計が加算されていくことを定義-->
+            <% @total +=  cart_item.subtotal %>
+            <td>
+              <%= link_to "削除する", customers_cart_item_path(cart_item), method: :delete,class: "btn btn-danger" %>
+            </td>
             <% end %>
-          </td>
-          <td>
-            <%= cart_product.subtotal.to_s(:delimited) %>
-          </td>
-          <td>
-            <%= link_to "削除する", customers_cart_product_path(cart_product.id), method: :delete,class: "btn btn-danger" %>
-          </td>
-          <% @total += cart_product.subtotal %>
-        </tr>
-        <% end %>
+          </tr>
+        </tbody>
       </table>
     </div>
   </div>
-<br><br>
-
+<br>
+<br>
   <div class="row">
-    <div class="col-md-6 offset-md-2">
-      <%= link_to "買い物を続ける", root_path, class: "btn btn-primary" %>
+    <div class="col-md-2 offset-md-2 mb-5">
+      <%= link_to "買い物を続ける", items_path, class: "btn btn-primary" %>
     </div>
-    <div class="col-md-2">
-      <table class="cart_products">
+    <div class="col-md-3 offset-md-3 mb-5">
+      <table class="table table-bordered float-md-light">
         <tr>
-          <th>合計金額</th>
-          <td><%= @total.to_s(:delimited) %></td>
+          <th class="table-warning"  style="width: 50%">合計金額</th>
+          <td style="width: 50%"><%= @total.to_s(:delimited) %></td>
         </tr>
       </table>
     </div>
   </div>
-
-
-<!--データ渡す-->
   <div class="row">
-    <div class="col-md-6 offset-md-4">
-      <%= link_to "情報入力に進む", new_order_path, class: "btn btn-success" %>
+    <div class="mx-auto mb-5">
+      <%= link_to "情報入力にすすむ", new_order_path(current_customer.id), class: "btn btn-success" %>
     </div>
-
   </div>
 </div>
