--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -40,7 +40,7 @@
           <!--住所入力欄-->
           <div class="form-group row", style="padding-left:20px;">
             <%= f.label "郵便番号（ハイフンなし）", class: "col-md-4" %>
-            <%= f.text_field :postal_code, class: "form-control col-md-3" %>
+            <%= f.text_field :postcode, class: "form-control col-md-3" %>
           </div>
           <div class="form-group row", style="padding-left:20px;">
             <%= f.label "住所", class: "col-md-4" %>
