--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,22 +1,22 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-9 mx-auto">
     <%= render 'items/genre', genres: @genres %>
-      <h2>商品一覧（全<%= @items.count %>件）</h2>
-      <div class='d-flex flex-wrap'>
-        <% @items.each do |item| %>
-        <div class="col-md-3">
-        <div class="card">
-        <div class="col-xs-3">
-          <%= link_to item_path(item) do %>
-          <%= attachment_image_tag item, :image, :fill, 80, 80, format: "no-image-icon.jpg" %>
-          <% end %><br>
-          <%= item.name %><br>
-          <%= item.price %><br>
-        </div>
-        </div>
-        </div>
-        <% end %>
+      <div class="col-md-9 offset-md-1 my-5">
+        <h2>商品一覧（全<%= @items.count %>件）</h2>
+        <div class='d-flex justify-content-start flex-wrap mb-5'>
+          <% @items.each do |item| %>
+          <div class="col-md-3">
+          <div class="card">
+          <div class="col-xs-3">
+            <%= link_to item_path(item) do %>
+            <%= attachment_image_tag item, :image, :fill, 80, 80, format: "no-image-icon.jpg" %>
+            <% end %><br>
+            <%= item.name %><br>
+            <%= item.price %><br>
+          </div>
+          </div>
+          </div>
+          <% end %>
       </div>
     </div>
   </div>
