--- a/app/views/orders/confirm.html.erb
+++ b/app/views/orders/confirm.html.erb
@@ -51,4 +51,14 @@
       </tr>
       </table>
 
-      <%= link_to "注文を確定する", complete_orders_path, class: "btn btn-primary" %>
+      <%= form_with model: @order, url: orders_path, local:true do |f| %>
+        <%= f.hidden_field :postcode, value: @order.postcode %>
+        <%= f.hidden_field :address, value: @order.address %>
+        <%= f.hidden_field :name, value: @order.name %>
+        <%= f.hidden_field :payment_method, value: @order.payment_method %>
+        <%= f.hidden_field :shipping_cost, value:'800' %>
+        <%= f.hidden_field :status, value: 'wait' %>
+        <%= f.hidden_field :customer_id, value: 'current_customer.id' %>
+        <%= f.hidden_field :total_payment, value: '@total' %>
+        <%= f.submit "注文を確定する", class:"mt-2 btn-success mb-5" %>
+      <% end %>
