--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -13,15 +13,17 @@
     </tr>
     <% @orders.each do |order| %>
       <td>
-        <%= link_to admin_order_datails_path do %>
-          <%= order.created_at %>
-          <!--<%#= order.created_at.to_s(:datetime_jp) %> 日本時間に修正する？-->
+        <%= link_to admin_order_path(order.id) do %>
+          <%= order.created_at.to_s(:datetime_jp) %>
         <% end %>
       </td>
-      <td><%= ordes.last_name %><%= order.first_name %></td>
-      <td><%= order.order_details.sum(:quantity) %></td>
+      <td><%= order.name %></td>
       <td>
-        <%= Order.order_statuses_i18n[order.order.order_status] %>
+        <%#= order.order_details.amount %>
+        <%= order.order_details.sum(:amount) %>
+        </td>
+      <td>
+        <%#= Order.order_statuses_i18n[order.order.order_status] %>
         <%#= order.status_i18n %>
         <!--Gem必要？-->
       </td>
