--- a/app/views/orders/confirm.html.erb
+++ b/app/views/orders/confirm.html.erb
@@ -14,8 +14,8 @@
                 <%= item.item.name %></td>
             <td><%= item.item.add_tax_price.to_s(:delimited) %></td>
             <td><%= item.amount %></td>
-            <td><%= item.subtotal.to_s(:delimited) %></td>
-            <td><% @total +=  item.subtotal %></td>
+            <td><%= item.add_tax_subtotal.to_s(:delimited) %></td>
+            <td><% @total +=  item.add_tax_subtotal %></td>
           </tr>
           <% end %>
         </tbody>
@@ -33,7 +33,7 @@
         </tr>
         <tr>
         　<th>請求金額</th>
-          <td><%= (@total += 800).to_s(:delimited) %></td>
+          <td><%= (@total + 800).to_s(:delimited) %></td>
         </tr>
       </table>
       </div>
@@ -58,7 +58,7 @@
         <%= f.hidden_field :payment_method, value: @order.payment_method %>
         <%= f.hidden_field :shipping_cost, value:'800' %>
         <%= f.hidden_field :status, value: 'wait' %>
-        <%= f.hidden_field :customer_id, value: 'current_customer.id' %>
-        <%= f.hidden_field :total_payment, value: '@total' %>
+        <%= f.hidden_field :customer_id, value: current_customer.id %>
+        <%= f.hidden_field :total_payment, value: @total %>
         <%= f.submit "注文を確定する", class:"mt-2 btn-success mb-5" %>
       <% end %>
