--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -9,7 +9,7 @@
         </tr>
         <tr>
           <th>配送先</th>
-          <td><%= @order.full_address %></td>
+          <td><%= @order.address %></td>
         </tr>
         <tr>
           <th>支払方法</th>
@@ -17,7 +17,7 @@
         </tr>
         <tr>
           <th>ステータス</th>
-          <td><%= @order.status_0 %></td>
+          <td><%= @order.status %></td>
         </tr>
       </table>
     </div>
@@ -26,7 +26,7 @@
       <table class="orders">
         <tr>
           <th>商品合計</th>
-          <td><%= @order.total_payment %></td>
+          <td><%= (@order.total_payment).to_s(:delimited) %></td>
         </tr>
         <tr>
           <th>配送料</th>
@@ -34,7 +34,7 @@
         </tr>
         <tr>
           <th>ご請求額</th>
-          <td><%= @order.total_payment + @order.shipping_cost %></td>
+          <td><%= (@order.total_payment + @order.shipping_cost).to_s(:delimited)%></td>
         </tr>
       </table>
     </div>
@@ -52,12 +52,12 @@
           </tr>
         </thead>
         <tbody>
-          <% @order.order_details.each do |order_detail| %>
+          <% @order.order_details.each do |item| %>
           <tr>
-            <td><%= order_detail.item.name %></td>
-            <td><%= order_detail.price %></td>
-            <td><%= order_detail.amount %></td>
-            <td><%= order_detail.price * order_detail.amount %></td>
+            <td><%= item.item.name %></td>
+            <td><%= (item.item.add_tax_price) %></td>
+            <td><%= item.amount %></td>
+            <td><%= ((item.item.add_tax_price) * item.amount).to_s(:delimited) %></td>
           </tr>
           <% end %>
         </tbody>
