--- a/app/views/cart_items/index.html.erb
+++ b/app/views/cart_items/index.html.erb
@@ -35,9 +35,9 @@
               <% end %>
             </td>
             <!--数値を３桁で区切る-->
-            <td><%= cart_item.subtotal.to_s(:delimited) %></td>
+            <td><%= cart_item.add_tax_subtotal.to_s(:delimited) %></td>
             <!--@totalに各商品ごとの小計が加算されていくことを定義-->
-            <% @total +=  cart_item.subtotal %>
+            <% @total +=  cart_item.add_tax_subtotal %>
             <td>
               <%= link_to "削除する", cart_item_path(cart_item), method: :delete,class: "btn btn-danger" %>
             </td>
