--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -14,7 +14,7 @@
         <% @orders.each do |order| %>
             <tr>
               <td><%= order.created_at.strftime("%Y/%m/%d") %></td>
-              <td><%= order.full_address %></td>
+              <td><%= order.address %></td>
               <td>
                 <% order.order_details.each do |order_detail| %>
                   <%= order_detail.item.name %><br />
