--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -8,7 +8,7 @@
     <table class="table table-bordered">
       <tr>
         <th>購入者</th>
-        <td><%= @order.last_name %><%= @order.first_name %></td>
+        <td><%= @order.name %></td>
       </tr>
       <tr>
         <th>注文日</th>
@@ -16,7 +16,7 @@
       </tr>
       <tr>
         <th>配送先</th>
-        <td><%= @order.adress %></td>
+        <td><%= @order.address %></td>
       </tr>
       <tr>
         <th>支払方法</th>
@@ -25,11 +25,10 @@
       <tr>
         <!--model: [:admin, @order]←名前空間が異なるコントローラを指定する-->
         <%#= form_with model: [:admin, @order], local:true do |f| %>
-        <%= form_with model: @order, local:true do |f| %>
+        <%= form_with(model: @order, url: admin_order_path, local: true) do |f| %>
         <th>注文ステータス</th>
         <td>
-          <!--enum必要-->
-          <%= f.select :order_status, [['入金待ち','0'],['入金確認','1'],['製作中','2'],['発送準備中','3'],['発送済み','4']] %>
+          <%= f.select :status, ['入金待ち','入金確認','製作中','発送準備中','発送済み'], :selected => @order.status %>
           <%= f.submit "更新", class:"btn btn-success" %>
         </td>
         <% end %>
@@ -55,9 +54,8 @@
           <td><%= order_detail.price * order_detail.amount %></td>
           <td>
             <div>
-              <!--form_with で製作ステータスの更新させる-->
               <%#= form_with model: [:admin, order_detail], local:true do |f| %>
-              <%= form_with model: order_detail, local:true do |f| %>
+              <%= form_with(model:[@order, order_detail], url: admin_order_order_detail_path(order_detail), local: true) do |f| %>
                 <!--enum必要-->
                 <%= f.select :making_status, [['着手不可','0'],['製作待ち','1'],['製作中','2'],['製作完了','3']] %>
                 <%= f.submit "更新", class:"btn btn-success" %>
