--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -28,6 +28,7 @@
         <%= form_with(model: @order, url: admin_order_path, local: true) do |f| %>
         <th>注文ステータス</th>
         <td>
+          <!--enum-->
           <%= f.select :status, ['入金待ち','入金確認','製作中','発送準備中','発送済み'], :selected => @order.status %>
           <%= f.submit "更新", class:"btn btn-success" %>
         </td>
