--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -16,8 +16,9 @@
           <td><%= @order.payment_method_i18n %></td>
         </tr>
         <tr>
+          <!--モデル参照-->
           <th>ステータス</th>
-          <td><%= @order.status %></td>
+          <td><%= @order.status_i18n %></td>
         </tr>
       </table>
     </div>
