--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -21,7 +21,8 @@
                 <% end %>
               </td>
               <td><%= (order.shipping_cost + order.total_payment).to_s(:delimited) %></td>
-              <td><%= order.status %></td>
+              <!--モデル参照-->
+              <td><%= order.status_i18n %></td>
               <td><%= link_to "表示する", order_path(order), class: "btn btn-primary" %></td>
             </tr>
           <% end %>
