--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
           </div>
           <div class="col-md-2 align-self-center">
             <% if customer_signed_in? %>
-              <p>ようこそ<%= current_customer.last_name %>さん！</p>
+              <p>ようこそ <%= current_customer.last_name %> さん！</p>
             <% end %>
           </div>
           <div class="col-md-7">
@@ -65,7 +65,7 @@
       <%= yield %>
     </main>
 
-    <footer>©S️</footer>
+    <footer>©　長野のケーキ屋さん　</footer>
 </div>
   </body>
 </html>
