--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -24,7 +24,7 @@
         </td>
       <td>
         <%#= Order.order_statuses_i18n[order.order.order_status] %>
-        <%#= order.status_i18n %>
+        <%= order.status %>
         <!--Gem必要？-->
       </td>
     </tbody>
