--- a/app/views/cart_items/index.html.erb
+++ b/app/views/cart_items/index.html.erb
@@ -51,7 +51,7 @@
 <br>
   <div class="row">
     <div class="col-md-2 offset-md-2 mb-5">
-      <%= link_to "買い物を続ける", items_path, class: "btn btn-primary" %>
+      <%= link_to "買い物を続ける", root_path, class: "btn btn-primary" %>
     </div>
     <div class="col-md-3 offset-md-3 mb-5">
       <table class="table table-bordered float-md-light">
