[add]商品追加画面

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -57,3 +57,22 @@ main {
  padding-bottom: 20px;
  // background-color:#eee;
 }
+
+
+
+
+.genres {
+  border-bottom:1px solid #000;
+}
+
+.genres th{
+
+  padding:10px;
+  background-color:#eee;
+  
+}
+
+.genres td{
+  padding:10px;
+  
+}
