--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -30,7 +30,7 @@
     <!--ジャンル表示-->
     <div class="row">
       <div class="col-md-8">
-        <table class="categories">
+        <table class="genres">
           <tr>
             <th class="col-md-8">ジャンル</th>
             <th class="col-md-4"></th>
