--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,7 @@
                 <li class="navbar-link"><%= link_to "カート", cart_items_path, class: "btn btn-outline-dark" %></li>
                 <li class="navbar-link"><%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "btn btn-outline-dark" %></li>
               <% elsif admin_signed_in? %>
+                <li class="navbar-link"><%= link_to "商品登録", new_admin_item_path, class: "btn btn-outline-dark" %></li>
                 <li class="navbar-link"><%= link_to "商品一覧", admin_items_path, class: "btn btn-outline-dark" %></li>
                 <li class="navbar-link"><%= link_to "会員一覧", admin_customers_path, class: "btn btn-outline-dark" %></li>
                 <li class="navbar-link"><%= link_to "注文履歴一覧", admin_orders_path, class: "btn btn-outline-dark" %></li>
