--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -49,6 +49,7 @@
         </thead>
         <tbody>
           <% @order_details.each do |order_detail| %>
+          <tr>
           <td><%= order_detail.item.name %></td>
           <td><%= (order_detail.price).to_s(:delimited) %></td>
           <td><%= (order_detail.amount).to_s(:delimited) %></td>
@@ -56,15 +57,16 @@
           <% @total +=  order_detail.price * order_detail.amount %>
           <td>
             <div>
-              <%= form_with(model:[@order, order_detail], url: admin_order_order_detail_path(order_detail), local: true) do |f| %>
+              <%= form_with(model:[@order, order_detail], url: admin_order_order_detail_path(@order,order_detail), local: true) do |f| %>
                 <!--enum必要-->
                 <%#= f.select :making_status, [['着手不可','0'],['製作待ち','1'],['製作中','2'],['製作完了','3']] %>
-                <%= f.select :making_status, ['着手不可','製作待ち','製作中','製作完了'], :selected => order_detail.making_status %>
+                <%= f.select :making_status, options_for_select([['着手不可'],['製作待ち'],['製作中'],['製作完了']], {:selected => order_detail.making_status}) %>
                 <%= f.submit "更新", class:"btn btn-success" %>
               <% end %>
             </div>
           </td>
           <td></td>
+          </tr>
           <% end %>
         </tbody>
       </table>
