--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,7 @@
  *= require_self
  */
 
+
 @import "bootstrap";
 
 * {
@@ -56,4 +57,23 @@ main {
  padding-top: 20px;
  padding-bottom: 20px;
  // background-color:#eee;
+}
+
+
+
+
+.genres {
+  border-bottom:1px solid #000;
+}
+
+.genres th{
+
+  padding:10px;
+  background-color:#eee;
+
+}
+
+.genres td{
+  padding:10px;
+
 }
