--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -12,15 +12,19 @@
           </div>
           <h2>新着情報</h2>
           <div class="d-flex flex-row mt-2"></div>
-            <% @item.each do |item| %>
+            <div class="col-sm-3">
+            <div class="card">
+            <% @items.last(4).reverse.each do |item| %>
               <div>
-              <%= link_to product_path(product) do %>
-                <%= attachment_image_tag product, :image, :fill, 200, 200, fallback: "no_image.jpg" %>
+              <%= link_to item_path(item) do %>
+                <%= attachment_image_tag item, :image, :fill, 200, 200, fallback: "no_image.jpg" %>
               <% end %>
               </div>
               <div><%= item.name %></div>
               <div>¥ <%= item.price.to_s(:delimited) %></div>
             <% end %>
+            </div>
+            </div>
           </div>
       </div>
     </div>
