--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,14 +42,13 @@
 
 footer{
   border-top: 1px solid #a9a9a9;
-  padding-top:15px;
-  padding-bottom:15px;
-  text-align:center;
-  background-color:#CDBBEC;
-  height:100px;
-  position:absolute;
-  width:100%;
-  bottom: 0;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  text-align: center;
+  background-color: #CDBBEC;
+  height: 100px;
+  position: absolute;
+  width: 100%;
 }
 
 
@@ -63,18 +62,30 @@ main {
 
 
 .genres {
-  border-bottom:1px solid #000;
+  border-bottom: 1px solid #000;
 }
 
 .genres th{
 
-  padding:10px;
+  padding: 10px;
   background-color:#eee;
 }
 
 .genres td{
-  padding:10px;
+  padding: 10px;
 }
 
-  
+.list-box {
+  border: 2px solid #ff0000;
+}
 
+.card {
+  flex-direction: row;
+}
+
+.new-item {
+  margin-right: 10px;
+}
+
+.new-item-text {
+}
