--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,9 +47,9 @@ footer{
   text-align:center;
   background-color:#CDBBEC;
   height:100px;
-  position:absolute;
   width:100%;
   bottom: 0;
+  position: fixed;
 }
 
 
@@ -76,5 +76,16 @@ main {
   padding:10px;
 }
 
-  
 
+.admin_items th {
+  padding:15px;
+}
+
+
+.col-4 th {
+  padding-bottom: 5px;
+}
+
+.col-4 td {
+  padding-left: 20px;
+}
