--- a/app/views/customer/registrations/new.html.erb
+++ b/app/views/customer/registrations/new.html.erb
@@ -55,5 +55,9 @@
     </div>
   <% end %>
 
-  <%= render "customer/shared/links" %>
+  　<div>
+  　   既に登録済みの方は
+  　<br>
+  　   <%= link_to "こちら", "/customers/sign_in" %>からログインして下さい
+  　 </div>
 </div>
