--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,9 +33,8 @@
 
 .shadow-sm {
   border-bottom: 1px solid #a9a9a9;
-  background-image: url("<%= image_tag('header_footer.png') %>");
   margin-top: 0;
-
+  background-image: image-url('mizutama.jpeg');
  }
 
 .navbar-link {
@@ -47,11 +46,11 @@ footer{
   padding-top:15px;
   padding-bottom:15px;
   text-align:center;
-  background-color:#CDBBEC;
   height:100px;
   width:100%;
   bottom: 0;
   position: fixed;
+  background-image: image-url('mizutama.jpeg');
 }
 
 
