--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
       <%= yield %>
     </main>
 
-    <footer class="bg-dark text-white pt-5 pb-4">
+    <footer class="text-dark pt-5 pb-4">
       <div class="container">
         <div class="row no-gutters">
           <div class="col-md-4">
