--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,14 +51,9 @@
       <%= yield %>
     </main>
 
-    <footer class="text-dark pt-5 pb-4">
+    <footer class="text-dark ">
       <div class="container">
-        <div class="row no-gutters">
-          <div class="col-md-4">
             <p>©ながのケーキ</p>
-            <%= image_tag('logo.png') %>
-　　　　　</div>
- 　　　　　</div>
       </div>
     </footer>
   </body>
