--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,13 +29,13 @@
   position:relative;
   padding-bottom: 100px;
   box-sizing: border-box;
- }
+}
 
 .shadow-sm {
   border-bottom: 1px solid #a9a9a9;
-  margin-top: 0;
   background-image: image-url('mizutama.jpeg');
- }
+  margin: 0;
+}
 
 .navbar-link {
  margin-left: 30px;
@@ -43,16 +43,16 @@
 
 footer{
   border-top: 1px solid #a9a9a9;
-  padding-top:15px;
-  padding-bottom:15px;
+  width: 100%;
+  height: 120px;
   text-align:center;
-  height:100px;
-  width:100%;
-  bottom: 0;
-  position: fixed;
   background-image: image-url('mizutama.jpeg');
+　height: 100px;
 }
 
+.body{
+  margin: 0;
+}
 
 main {
  padding-top: 20px;
