--- a/app/views/cart_items/index.html.erb
+++ b/app/views/cart_items/index.html.erb
@@ -1,7 +1,9 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-8 offset-md-1 my-5">
-      <h2>ショッピングカート</h2>
+    <div class="col-md-8  my-5 ">
+      <div class="shopping_cart">
+      <h3>ショッピングカート</h3>
+      </div>
     </div>
     <div class="col-md-2 my-5">
       <div class="text-right">
@@ -11,8 +13,8 @@
   </div>
   <div class="row">
     <div class="col">
-      <table class="cart_items col-md-10">
-        <thead class="table-warning">
+      <table class="col-md-10">
+        <thead>
           <th style="width: 35%">商品名</th>
           <th style="width: 15%">単価（税込）</th>
           <th style="width: 20%">数量</th>
