--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,6 +1,6 @@
+<%#= render 'items/genre', genres: @genres %>
 <div class="container">
   <div class="row">
-    <%= render 'items/genre', genres: @genres %>
       <div class="mt-5 d-flex">
         <div class="image-box mr-4">
           <%= attachment_image_tag @item, :image, :fill, 200, 200, format: "no-image-icon.jpg" %>
