--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,20 +1,16 @@
+<%#= render 'items/genre', genres: @genres %>
 <div class="container">
   <div class="row">
-    <%= render 'items/genre', genres: @genres %>
       <div class="col-md-9 offset-md-1 my-5">
         <h2>商品一覧（全<%= @items.count %>件）</h2>
         <div class='d-flex justify-content-start flex-wrap mb-5'>
           <% @items.each do |item| %>
           <div class="col-md-3">
-          <div class="card">
-          <div class="col-xs-3">
             <%= link_to item_path(item) do %>
             <%= attachment_image_tag item, :image, :fill, 80, 80, format: "no-image-icon.jpg" %>
             <% end %><br>
             <%= item.name %><br>
-            <%= item.price %><br>
-          </div>
-          </div>
+            ￥<%= item.price %><br>
           </div>
           <% end %>
       </div>
