--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -3,16 +3,19 @@
   <div class="row">
     <div class="col-md-10">
       <h3>注文情報入力</h3>
+      <br>
     <%= form_with model: @order, url: confirm_orders_path, local: true do |f| %>
-      <h5>支払い方法</h5>
+      <h5><p class="font-weight-bold">支払い方法</p></h5>
         <%= f.radio_button :payment_method, Order.payment_methods.key(0) %>
         <%= f.label :payment_method, Order.payment_methods_i18n[:credit_card] %>
         <br>
         <%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
         <%= f.label :payment_method, Order.payment_methods_i18n[:transfer] %>
          <%# この辺はenumを使った記述だよ！ models/order.rbも関係してくる %>
+         
+        <div>&nbsp;</div>
 
-      <h5>お届け先</h5>
+      <h5><p class="font-weight-bold">お届け先</p></h5>
         <div>
           <%= f.radio_button :address_number, 0, {:checked => true} %>
           <%= f.label :address_number, "ご自身の住所" %>
