--- a/app/views/addresses/index.html.erb
+++ b/app/views/addresses/index.html.erb
@@ -32,8 +32,8 @@
 
   <div class="row">
     <div class="col-md-8">
-      <table class="addresses">
-        <tr>
+      <table class="addresses table-bordered">
+        <tr class="address-box">
           <th>郵便番号</th>
           <th>住所</th>
           <th>宛名</th>
@@ -44,7 +44,7 @@
             <td><%= address.postcode %></td>
             <td><%= address.address %></td>
             <td><%= address.name %></td>
-            <td>
+            <td class=edit-delete>
             <%= link_to "編集する", edit_address_path(address.id), class: "btn btn-success" %>
             <%= link_to "削除する", address_path(address.id), class: "btn btn-danger" ,method: :delete %>
             </td>
