--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,8 +55,8 @@
       <div class="container">
         <div class="row no-gutters">
           <div class="col-md-4">
-            <p>©ながのケーキ</p>
-            <%= image_tag('logo.png') %>
+            <p>©ながのケーキ<%= image_tag('logo.png') %></p>
+
 　　　　　</div>
  　　　　　</div>
       </div>
