--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -18,7 +18,7 @@
           <%= f.label :address_number, "ご自身の住所" %>
             <section class="select">
             〒<%= current_customer.postcode %><%= current_customer.address %>
-            <%= current_customer.last_name %><%= current_customer.first_name %>
+            <%= current_customer.first_name %><%= current_customer.last_name %>
             </section>
         </div>
 
