--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,11 +1,11 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6 offset-md-1">
-      <h2 class="my-5">注文履歴詳細</h2>
+      <h2 class="my-4">注文履歴詳細</h2>
     </div>
   </div>
   <div class="col-6">
-    <table class="order.customer">
+    <table class="order-customer">
       <tr>
         <th>購入者</th>
         <td><%= @order.name %></td>
