--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col">
       <h3>注文履歴一覧</h3>
-      <table class="orders">
+      <table class="table table-bordered">
         <tr>
           <th>注文日</th>
           <th>配送先</th>
@@ -14,7 +14,11 @@
         <% @orders.each do |order| %>
             <tr>
               <td><%= order.created_at.strftime("%Y/%m/%d") %></td>
-              <td><%= order.address %></td>
+              <td>
+                <%= order.postcode %> <br>
+                <%= order.address %> <br>
+                <%= order.name %> 
+              </td>
               <td>
                 <% order.order_details.each do |order_detail| %>
                   <%= order_detail.item.name %><br />
