--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -15,7 +15,7 @@
             <tr>
               <td><%= order.created_at.strftime("%Y/%m/%d") %></td>
               <td>
-                <%= order.postcode %> <br>
+                〒<%= order.postcode %> <br>
                 <%= order.address %> <br>
                 <%= order.name %> 
               </td>
@@ -24,7 +24,7 @@
                   <%= order_detail.item.name %><br />
                 <% end %>
               </td>
-              <td><%= (order.shipping_cost + order.total_payment).to_s(:delimited) %></td>
+              <td><%= (order.shipping_cost + order.total_payment).to_s(:delimited) %> 円</td>
               <!--モデル参照-->
               <td><%= order.status_i18n %></td>
               <td><%= link_to "表示する", order_path(order), class: "btn btn-primary" %></td>
